--- a/ujian.html
+++ b/ujian.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 <title>HTML</title>
+
+<link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body> 
+    <h1>Hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus alias, recusandae id voluptate corrupti temporibus reiciendis, dignissimos esse quibusdam exercitationem culpa excepturi blanditiis quisquam aut suscipit nihil ab illum. Id.</p>
 </body>
 </html>
